# dedupliface

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml
.github/workflows/: docker-build-deploy.yml
app/: kobo_api_client.py  vector_store.py
src/: kobo_api_client.py  vector_store.py
